# codex-watchdog

./: .gitignore  AGENTS.md  README.md  USER_GUIDE.zh-CN.md  codex-watchdog-prd.md  openclaw-codex-watchdog-prd.md  pyproject.toml
.github/: branch-protection.main.json
ai_sdlc/: __init__.py  __main__.py  cli.py
docs/: codex-handoff.md  framework-defect-backlog.zh-CN.md  getting-started.zh-CN.md  project-backlog.zh-CN.md  pull-request-checklist.zh.md  框架自迭代开发与发布约定.md
examples/: codex_watchdog_client.py  native_thread_payload.json  openclaw_watchdog_client.py  openclaw_webhook_runtime.py  register_native_thread.py
scripts/: __init__.py  export_openapi.py  generate_release_gate_report.py  install_watchdog_endpoint_notifier_launchd.sh  install_watchdog_launchd.sh  reconcile_ai_sdlc_state.py  refresh_release_gate_artifacts.py  start_watchdog.sh  start_watchdog_endpoint_notifier.sh  watchdog_external_integration_smoke.py  watchdog_feishu_long_connection.py
tests/: _polling.py  _watchdog_audit_fixtures.py  test_007_alignment.py  test_a_control_agent.py  test_a_control_agent_control_flow.py  test_a_control_agent_sync_loop.py  test_ai_sdlc_reconciliation.py  test_ai_sdlc_repo_cli.py  test_ai_sdlc_runtime_io.py  test_ai_sdlc_runtime_write_contracts.py  test_checkpoint_yaml_contracts.py  test_ci_gate_contracts.py  test_codex_app_server_bridge.py  test_codex_local_client.py  test_codex_stdio_transport.py  test_coverage_audit_snapshot_contracts.py  test_framework_contracts.py  test_github_branch_protection_audit_workflow.py  test_github_branch_protection_contracts.py  test_long_running_autonomy_doc_contracts.py  test_long_running_residual_contracts.py  (+73 more)
(+1032 files in other folders)
