[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-watchdog"
version = "0.1.0"
description = "Codex runtime watchdog and control-plane services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
  "lark-oapi>=1.5.3,<2",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/a_control_agent", "src/watchdog", "ai_sdlc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pytest-asyncio]
asyncio_default_fixture_loop_scope = "function"
